--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,10 @@ branding:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v2
+      with:
+        repository: applibgroup/HarmonyOsSdk
+        path: SDK
     - name: Build
       env:
         OHOS_SDK_HOME: ${{ github.action_path }}
