--- a/action.yml
+++ b/action.yml
@@ -12,11 +12,9 @@ runs:
         path: SDK
     - name: Build
       env:
-        OHOS_SDK_HOME: ${{ github.action_path }}
+        OHOS_SDK_HOME: ${{ github.workspace }}/SDK
       shell: cmd
       id: main
       working-directory: ${{ github.workspace }}
       run: |
-        xcopy ${{ github.action_path }}\config ${{ github.workspace }}\config\
-        xcopy ${{ github.action_path }}\config\local.properties ${{ github.workspace }}\
         ${{ github.action_path }}/run.bat
