--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,6 @@ runs:
       run: |
         xcopy ${{ github.workspace }}\SDK\config ${{ github.workspace }}\config\
         xcopy ${{ github.workspace }}\SDK\config\local.properties ${{ github.workspace }}\
-        echo %LANG%
+        echo %LANG%\
+        .\node_modules\.bin\eslint -c ${{ github.workspace }}\SDK\config\.eslintrc.js --format json entry --output-file result.json
         gradlew assembleDebug sonarqube --info
