--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,9 @@ runs:
         .\node_modules\.bin\eslint -c ${{ github.workspace }}\SDK\config\.eslintrc.js --format json entry --output-file result.json
         gradlew assembleDebug sonarqube --info
     - name: Run ESlint
+      shell: cmd
       run: .\node_modules\.bin\eslint -c ${{ github.workspace }}\SDK\config\.eslintrc.js --format json entry --output-file result.json
       continue-on-error: true
     - name: build
+      shell: cmd
       run: gradlew assembleDebug sonarqube --info
