--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ runs:
     - name: Run ESlint
       shell: cmd
       run:|
-        npm install eslint
+        npm install eslint\
         .\node_modules\.bin\eslint -c config\.eslintrc.json --format json entry --output-file result.json
     - name: build
       env:
