--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
         echo %LANG%
     - name: Run ESlint
       shell: cmd
-      run: .\node_modules\.bin\eslint -c config\.eslintrc.json --format json entry --output-file result.json
+      run: eslint -c config\.eslintrc.json --format json entry --output-file result.json
     - name: build
       env:
         OHOS_SDK_HOME: ${{ github.workspace }}\SDK
