--- a/action.yml
+++ b/action.yml
@@ -17,5 +17,5 @@ runs:
       run: |
         xcopy ${{ github.workspace }}\SDK\config ${{ github.workspace }}\config\
         echo %LANG%\
-        eslint -c config\.eslintrc.js --format json entry --output-file result.json || echo "eslint comlete"\
+        cd entry && eslint -c ..\config\.eslintrc.json --format json . --output-file result.json || echo "eslint comlete"
         gradlew assembleDebug sonarqube --info
