--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,9 @@ runs:
     - name: eslint
       shell: cmd
       run: eslint -c .eslintrc.json --format json entry --output-file result.json && exit 0   
+    - name: addplugins
+      shell: cmd
+      run: .\addplugin.bat  
     - name: build
       env:
         OHOS_SDK_HOME: ${{ github.workspace }}\SDK
