--- a/action.yml
+++ b/action.yml
@@ -29,5 +29,4 @@ runs:
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: "f84cc9dbc437cd0eb2ad378978b9dfa6c673e0f9"
